Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52455

pixelFormatFromImageFormat doesn't support QImage::Format_Grayscale8

    XMLWordPrintable

Details

    • 2b96c113cf7057b556856149114999b973b3f2c2 (qt/qtmultimedia/dev) 5a10af9bca8976ffb415adf12d4e8ffe4921da67 (qt/qtmultimedia/5.15)

    Description

      pixelFormatFromImageFormat returns QVideoFrame::Format_Invalid when called with QImage::Format_Grayscale8. It should return QVideoFrame::Format_Y8.
      QImage::Format_Grayscale8 was added in 5.5

      Attachments

        For Gerrit Dashboard: QTBUG-52455
        # Subject Branch Project Status CR V

        Activity

          People

            valentyn.doroshchuk Valentyn Doroshchuk
            marv Martin Voelkle
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes