Map QVideoFrame::Format_Y8=>QImage::Format_Grayscale8 in QVideoFrame

Fixes: QTBUG-52455
Change-Id: I30582582935ae0a2c5094db995cba83b62adc767
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 2b96c113cf7057b556856149114999b973b3f2c2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>