src/multimediawidgets/qpaintervideosurface.cpp
@@ -109,7 +109,8 @@ QVideoSurfaceGenericPainter::QVideoSurfaceGenericPainter()
         m_imagePixelFormats << QVideoFrame::Format_RGB24;
 
      m_imagePixelFormats << QVideoFrame::Format_ARGB32
-                         << QVideoFrame::Format_RGB565;
+                         << QVideoFrame::Format_RGB565
+                         << QVideoFrame::Format_Y8;
 }
 
 QList<QVideoFrame::PixelFormat> QVideoSurfaceGenericPainter::supportedPixelFormats(
