tests/auto/unit/qvideoframe/tst_qvideoframe.cpp
@@ -975,7 +975,7 @@ void tst_QVideoFrame::formatConversion_data()
             << QImage::Format_Invalid
             << QVideoFrame::Format_IMC4;
     QTest::newRow("QVideoFrame::Format_Y8")
-            << QImage::Format_Invalid
+            << QImage::Format_Grayscale8
             << QVideoFrame::Format_Y8;
     QTest::newRow("QVideoFrame::Format_Y16")
             << QImage::Format_Invalid
